@@ -17,8 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include "edge.hpp"
-#include "node.hpp"
+#include "graph/edge.hpp"
+#include "graph/node.hpp"
 
 namespace Gamera { namespace GraphApi {
 
