@@ -17,7 +17,7 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include "subgraph_root.hpp"
+#include "graph/subgraph_root.hpp"
 
 namespace Gamera { namespace GraphApi {
 
