@@ -1,12 +1,14 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - C++ graph API also usable from toolkits
+
  - fixed a type mismatch in graph API on 64bit bigendian architectures
 
  - changing feature set in Biollante now works
 
  - changes in rank() and mean():
-    o now significantly faster
+    o significantly faster
     o default border_treatment changed to 'reflect',
       because that leads to more expected results than 'padwhite'
     o extended to grey16 images
